# RMV03

./: CMakeLists.txt  main.cpp  readme.md
include/: windmill.hpp
src/: DataFitting.cpp  GetPoint.cpp  windmill.cpp
